--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,25 @@
 <title>Exploring Unseen</title>
 </head>
 <body>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Countries</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Sign In</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Sign Up</a>
+            </li>
+        </ul>
+    </nav>
+
+
     {% block content %}
     <!-- Content from other files inserted here -->
     {% endblock %}
