--- a/templates/index.html
+++ b/templates/index.html
@@ -3,5 +3,8 @@
 
 Exploring Unseen
 
+<div class="container-fluid">
+    <img src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="img-fluid" alt="Responsive image">
+</div>
 
 {% endblock %}
