Link style.css file and make image container background

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,15 @@
 
 Exploring Unseen
 
-<div class="container-fluid">
-    <img src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="img-fluid" alt="Responsive image">
+<div class="container-fluid callout-container">
+    <div class="opaque-overlay"> </div>
+    <div class="row">
+        <div class="col-12">
+            <section class="callout jumbotron text-center text-light">
+                <h1 class="jumbotron-header">Welcome to Exploring Unseen.</h1>
+            </section>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
