--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,17 @@
 
 Exploring Unseen
 
-<div class="container-fluid callout-container">
+<div class="container-fluid callout-container text-light">
     <div class="opaque-overlay"> </div>
     <div class="row">
         <div class="col-12">
-            <section class="callout jumbotron text-center text-light">
+            <section class="callout jumbotron text-center">
                 <h1 class="jumbotron-header">Welcome to Exploring Unseen.</h1>
             </section>
         </div>
+    </div>
+    <div class="div-bottom h1 text-center">
+        <i class="fas fa-angle-down"></i>
     </div>
 </div>
 
