Add article card structure to home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,4 +17,43 @@ Exploring Unseen
     </div>
 </div>
 
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <div class="card-deck">
+                <div class="card">
+                    <img class="card-img-top" src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Article Title</h5>
+                        <p class="card-text">Brief outline of the post content. Brief outline of the post content. Brief outline of the post content.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Article Title</h5>
+                        <p class="card-text">Brief outline of the post content. Brief outline of the post content. Brief outline of the post content.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Article Title</h5>
+                        <p class="card-text">Brief outline of the post content. Brief outline of the post content. Brief outline of the post content.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
