--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-Exploring Unseen
-
+<!-- Hero image container -->
 <div class="container-fluid callout-container text-light">
     <div class="opaque-overlay"> </div>
     <div class="row">
@@ -41,8 +40,10 @@ Exploring Unseen
                         {% endif %}
                         <!-- Article content -->
                         <div class="card-body">
-                            <h5 class="card-title">{{ article.title }}</h5>
-                            <p class="card-text">{{ article.summary }}</p>
+                            <a href="{% url 'article_detail' article.slug %}">
+                                <h5 class="card-title">{{ article.title }}</h5>
+                                <p class="card-text">{{ article.summary }}</p>
+                            </a>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">{{ article.updated_date }}</small>
