Add background gradient to hero image

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,8 @@
 <!-- Hero image container -->
 <div class="container-fluid callout-container text-light">
     <div class="opaque-overlay"> </div>
-    <div class="row">
-        <div class="col-12">
-            <section class="callout jumbotron text-center">
-                <h1 class="jumbotron-header">Exploring Unseen.</h1>
-            </section>
-        </div>
-    </div>
-    <div class="div-bottom h1 text-center">
+    <div class="div-bottom h1 text-center text-light">
+        <h1>Exploring Unseen</h1>
         <i class="fas fa-angle-down"></i>
     </div>
 </div>
