--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,14 +20,12 @@
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
-}
-
-.jumbotron {
-    background-color: transparent;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
 }
 
 .div-bottom {
     position: absolute;
-    bottom: 1rem;
+    bottom: 0;
+    margin-bottom: 0;
+    padding: 1rem;
 }
