--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -3,16 +3,10 @@
 
 
 <!-- Hero image container -->
-<div class="container-fluid callout-container text-light">
+<div class="container-fluid callout-container">
     <div class="opaque-overlay"> </div>
-    <div class="row">
-        <div class="col-12">
-            <section class="callout jumbotron text-center">
-                <h1 class="jumbotron-header">{{ article.title }}</h1>
-            </section>
-        </div>
-    </div>
-    <div class="div-bottom h1 text-center">
+    <div class="div-bottom h1 text-center text-light">
+        <h1>Explore</h1>
         <i class="fas fa-angle-down"></i>
     </div>
 </div>
