--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
 {% block content %}
 
 <!-- Hero image container -->
-<div class="container-fluid callout-container text-light">
-    <div class="opaque-overlay"> </div>
-    <div class="div-bottom h1 text-center text-light">
+<div id="home-hero" class="home-hero container-fluid hero-container text-light">
+    <div class="hero-overlay"> </div>
+    <div class="hero-footer h1 text-center text-light">
         <h1>Exploring Unseen</h1>
         <i class="fas fa-angle-down"></i>
     </div>
