--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,6 @@
-.callout-container {
+/* Hero container */
+.hero-container {
     height: 100vh;
-
-    background: url("https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260") no-repeat bottom right fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -14,7 +13,17 @@
     position: relative;
 }
 
-.opaque-overlay {
+/* Hero images */
+#home-hero {
+    background: url("https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260") no-repeat bottom/cover fixed;
+}
+
+#article-hero {
+    background: url("https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260") no-repeat bottom/cover fixed;
+}
+
+/* Hero container overlay */
+.hero-overlay {
     position: absolute;
     top: 0;
     left: 0;
@@ -23,7 +32,8 @@
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
 }
 
-.div-bottom {
+/* Hero footer */
+.hero-footer {
     position: absolute;
     bottom: 0;
     margin-bottom: 0;
