--- a/templates/base.html
+++ b/templates/base.html
@@ -30,12 +30,18 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Countries</a>
                 </li>
+                {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sign In</a>
+                    <a class="nav-link" href="{% url 'account_logout' %}">Log Out</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sign Up</a>
+                    <a class="nav-link" href="{% url 'account_login' %}">Sign In</a>
                 </li>
+                {% endif %}
             </ul>
         </div>
     </nav>
