Edit hero image depending on page using custom data attribute and event listeners through external listeners.js file

--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -3,7 +3,7 @@
 
 
 <!-- Hero image container -->
-<div id="article-hero" class="container-fluid hero-container">
+<div id="article-hero" data-hero-page="article" class="container-fluid hero-container">
     <div class="hero-overlay"> </div>
     <div class="hero-footer h1 text-center text-light">
         <h1>Explore</h1>
