--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <!-- Hero image container -->
-<div id="home-hero" class="home-hero container-fluid hero-container text-light">
+<div id="home-hero" data-hero-page="home" class="home-hero container-fluid hero-container text-light">
     <div class="hero-overlay"> </div>
     <div class="hero-footer h1 text-center text-light">
         <h1>Exploring Unseen</h1>
