--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <!-- Hero image container -->
-<div id="home-hero" class="home-hero container-fluid hero-container">
+<div id="home-hero" data-hero-page="login" class="home-hero container-fluid hero-container">
   <div class="jumbotron">
     <div class="row">
       <div class="col-md-8 mt-3 offset-md-2">
