--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -8,7 +8,7 @@
 <div id="article-hero" data-hero-page="article" class="container-fluid hero-container">
     <div class="hero-overlay"> </div>
     <div class="hero-footer h1 text-center text-light">
-        <h1>Explore</h1>
+        <h1>{{ article.attraction }}</h1>
         <i class="fas fa-angle-down"></i>
 
         <!-- Article image -->
