Add alert informing user that comment is awaiting approval

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <div id="home-hero" data-hero-page="home" class="home-hero container-fluid hero-container text-light">
     <div class="hero-overlay"> </div>
     <div class="hero-footer h1 text-center text-light">
-        <h1>Exploring Unseen</h1>
+        <h1>Explore</h1>
         <i class="fas fa-angle-down"></i>
     </div>
 </div>
