Add upvote/downvote elements to article

--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -33,6 +33,43 @@
             <hr>
         </div>
     </div>
+    <!-- Voting -->
+    <!-- Upvote -->
+    <div class="row">
+        <div class="col-12">
+            {% if user.is_authenticated %}
+            <form action="" method="post">
+                {% csrf_token %}
+                {% if upvoted %}
+                <button class="btn-vote btn-upvoted"><i class="fas fa-chevron-up"></i></button>
+                {% else %}
+                <button class="btn-vote"><i class="fas fa-chevron-up"></i></button>
+                {% endif %}
+            </form>
+            {% endif %}
+        </div>
+    </div>
+    <!-- User votes -->
+    <div class="row">
+        <div class="col-12">
+            {{ article.vote_count }}
+        </div>
+    </div>
+    <!-- Downvote -->
+    <div class="row">
+        <div class="col-12">
+            {% if user.is_authenticated %}
+            <form action="" method="post">
+                {% csrf_token %}
+                {% if downvoted %}
+                <button class="btn-vote btn-downvoted"><i class="fas fa-chevron-down"></i></button>
+                {% else %}
+                <button class="btn-vote"><i class="fas fa-chevron-down"></i></button>
+                {% endif %}
+            </form>
+            {% endif %}
+        </div>
+    </div>
     <div class="row">
         <div class="col-12">
             {% if commented %}
