--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -61,7 +61,7 @@
     <div class="row">
         <div class="col-12">
             {% if user.is_authenticated %}
-            <form action="" method="post">
+            <form action="{% url 'article_downvote' article.slug %}" method="post">
                 {% csrf_token %}
                 {% if downvoted %}
                 <button type="submit" class="btn-vote btn-downvoted"><i class="fas fa-chevron-down"></i></button>
