--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -9,6 +9,7 @@
     <div class="hero-overlay"> </div>
     <div class="hero-footer h1 text-center text-light">
         <h1>{{ article.attraction }}</h1>
+        <h2>{{ article.country }}</h2>
         <i class="fas fa-angle-down"></i>
 
         <!-- Article image -->
