--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Countries</a>
+                    <a class="nav-link" href="{% url 'countries' %}">Countries</a>
                 </li>
                 {% if user.is_authenticated %}
                 <li class="nav-item">
