--- a/templates/countries.html
+++ b/templates/countries.html
@@ -60,6 +60,13 @@
         </ul>
     </nav>
     {% endif %}
+    </div>
+        <div class="text-center my-5">
+        <h1 class="fw-bolder">{{ country_name }}</h1>
+        {% if user.is_authenticated %}
+        <a class="btn btn-primary" href="{% url 'add_country' %}">Add Article</a>
+        {% endif %}
+    </div>
 </div>
 
 {% endblock %}
