--- a/templates/countries.html
+++ b/templates/countries.html
@@ -36,6 +36,9 @@
                         <div class="card-body">
                             <a href="{% url 'country_articles' country.country_name %}">
                                 <h5 class="card-title text-center">{{ country.country_name }}</h5>
+                                {% if user.is_authenticated %}
+                                <a class="btn btn-primary" href="{% url 'edit_country' country.country_name %}">Edit Country</a>
+                                {% endif %}
                             </a>
                         </div>
                     </div>
@@ -64,7 +67,7 @@
         <div class="text-center my-5">
         <h1 class="fw-bolder">{{ country_name }}</h1>
         {% if user.is_authenticated %}
-        <a class="btn btn-primary" href="{% url 'add_country' %}">Add Article</a>
+        <a class="btn btn-primary" href="{% url 'add_country' %}">Add Country</a>
         {% endif %}
     </div>
 </div>
