--- a/templates/edit_country.html
+++ b/templates/edit_country.html
@@ -15,7 +15,7 @@
   </div>
   <!-- Title -->
   <div class="row pt-3">
-    <h1 class="center-text">Add Country</h1>
+    <h1 class="center-text">Edit Country</h1>
   </div>
   <!-- Category details to edit -->
   <div class="row mx-auto">
