--- a/templates/country_articles.html
+++ b/templates/country_articles.html
@@ -38,7 +38,7 @@
                                 <h5 class="card-title">{{ article.title }}</h5>
                                 <p class="card-text">{{ article.summary }}</p>
                                 {% if user.is_authenticated %}
-                                <a class="btn btn-primary" href="{% url 'edit_article' article.slug %}">Edit Country</a>
+                                <a class="btn btn-primary" href="{% url 'edit_article' article.slug %}">Edit Article</a>
                                 {% endif %}
                             </a>
                         </div>
