--- a/templates/edit_article.html
+++ b/templates/edit_article.html
@@ -2,8 +2,8 @@
 {% block content %}
 
 <div class="container">
+  <!-- Message alerts for authentication, articles awaiting approval and errors -->
   <div class="row">
-    <!-- Message alerts for authentication, articles awaiting approval and errors -->
     <div class="col-6 offset-3 pt-3">
       {% for message in messages %}
       <div role="alert" id="msg" class="alert alert-dismissible fade show {{ message.tags }}">
@@ -20,15 +20,20 @@
   <!-- Article details to edit -->
   <div class="row mx-auto">
     <div class="col-12 col-md-8 offset-md-2">
-      <form action="{{ news.views.edit_article }}" method="POST" enctype="multipart/form-data">
+      <form action="{{ blog.views.edit_article }}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        <!-- Headline -->
+        <!-- Article Title -->
         <div class="row pt-3">Title:</div>
         <div class="row">{{ form.title }}</div>
-        <!-- Summary -->
+        <!-- Article Attraction -->
+        <div class="row pt-3">Attraction:</div>
+        <div class="row">
+          <textarea name="attraction" cols="40" rows="10" maxlength="150" required="" id="id_attraction" class="article-attraction">{{ form.attraction.value }}</textarea>
+        </div>
+        <!-- Article Summary -->
         <div class="row pt-3">Summary:</div>
         <div class="row">
-          <textarea name="summary" cols="40" rows="10" maxlength="150" required="" id="id_summary" class="article-summary"></textarea>
+          <textarea name="summary" cols="40" rows="10" maxlength="150" required="" id="id_summary" class="article-summary">{{ form.summary.value }}</textarea>
         </div>
         <!-- Image -->
         <div class="row pt-3">Image:</div>
@@ -40,7 +45,7 @@
         <!-- Article Content -->
         <div class="row pt-3">Article Content:</div>
         <div class="row">
-          <textarea id="summernote" name="editordata"></textarea>
+          <textarea id="summernote" name="editordata">{{ form.summernote.value }}</textarea>
         </div>
         <div class="row pt-3">
           <button class="btn btn-primary content-width mx-auto" type="submit">Update Article</button>
