--- a/templates/index.html
+++ b/templates/index.html
@@ -27,10 +27,11 @@
                 <div class="col-md-4">
                     <div class="card">
                         <!-- Article image -->
-                        {% if "default_image" in article.image.url %}
-                        <a href="/article/view/{{ article.id }}"><img class="card-img-top" src="{{ article.image.url }}" alt="Article image" /></a>
-                        {% else %}
+                        {{ article.image.url }}
+                        {% if "placeholder" in article.image.url %}
                         <a href="/article/view/{{ article.id }}"><img class="card-img-top" src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Article image" /></a>
+                        {% else %}
+                        <a href="/article/view/{{ article.id }}"><img class="card-img-top" src="{{ article.image.url }}" alt="Article image" /></a>
                         {% endif %}
                         <!-- Article content -->
                         <div class="card-body">
