--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,3 +44,10 @@
     margin-bottom: 0;
     padding: 1rem;
 }
+
+/* Bootstrap Cards */
+.card-img-top {
+    object-fit: cover;
+    width: 100%;
+    aspect-ratio: 4/3;
+}
