--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,3 +51,15 @@
     width: 100%;
     aspect-ratio: 4/3;
 }
+
+
+/* Voting Buttons */
+.btn-vote {
+    background-color: transparent;
+    border: none;
+    font-size: 3rem;
+}
+
+#vote-count {
+    margin-bottom: 0;
+}
