--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -26,91 +26,94 @@
                     <div class="text-muted fst-italic mb-2 text-center">Posted on {{ article.created_date|date:"j F, Y, g:i a" }} by {{ article.author }}</div>
                     <hr>
                 </header>
-                <section class="mb-5">
+                <section class="mb-3">
                     <!-- Article body -->
                     <p>{{ article.content | safe }}</p>
                 </section>
             </article>
         </div>
     </div>
-</div>
-    <!-- Voting -->
-    <!-- Upvote -->
     <div class="row">
-        <div class="col-12">
-            {% if user.is_authenticated %}
-            <form action="{% url 'article_upvote' article.slug %}" method="post">
-                {% csrf_token %}
-                {% if upvoted %}
-                <button type="submit" class="btn-vote btn-upvoted"><i class="fas fa-chevron-up"></i></button>
-                {% else %}
-                <button type="submit" class="btn-vote"><i class="fas fa-chevron-up"></i></button>
-                {% endif %}
-            </form>
-            {% else %}
-            <span class="btn-vote"><i class="fas fa-chevron-up"></i></span>
-            {% endif %}
-        </div>
-    </div>
-    <!-- User votes -->
-    <div class="row">
-        <div class="col-12">
-            {{ article.vote_count }}
-        </div>
-    </div>
-    <!-- Downvote -->
-    <div class="row">
-        <div class="col-12">
-            {% if user.is_authenticated %}
-            <form action="{% url 'article_downvote' article.slug %}" method="post">
-                {% csrf_token %}
-                {% if downvoted %}
-                <button type="submit" class="btn-vote btn-downvoted"><i class="fas fa-chevron-down"></i></button>
-                {% else %}
-                <button type="submit" class="btn-vote"><i class="fas fa-chevron-down"></i></button>
-                {% endif %}
-            </form>
-            {% else %}
-            <span class="btn-vote"><i class="fas fa-chevron-down"></i></span>
-            {% endif %}
-        </div>
-    </div>
-</div>
-    
-<!-- Comments -->
-<div class="container">
-    <!-- Display approved comments -->
-    <div class="row">
-        <div class="col-12">
-            <h2>Comments</h2>
-            {% for comment in comments %}
-            <h4>{{ comment.user_name }}</h4>
-            <p>{{ comment.body }}</p>
-            {% endfor %}
-            <hr>
-        </div>
-    </div>
-    <!-- Writing new user comment -->
-    <div class="row">
-        <div class="col-12">
-            {% if commented %}
-            <div role="alert">
-                Your comment is awaiting approval
+        <div class="col-lg-10 mx-auto mb-5">
+            <!-- Voting -->
+            <!-- Upvote -->
+            <div class="row">
+                <div class="col-12 text-center">
+                    {% if user.is_authenticated %}
+                    <form action="{% url 'article_upvote' article.slug %}" method="post">
+                        {% csrf_token %}
+                        {% if upvoted %}
+                        <button type="submit" class="btn-vote btn-upvoted"><i class="fas fa-chevron-up"></i></button>
+                        {% else %}
+                        <button type="submit" class="btn-vote"><i class="fas fa-chevron-up"></i></button>
+                        {% endif %}
+                    </form>
+                    {% else %}
+                    <span class="btn-vote"><i class="fas fa-chevron-up"></i></span>
+                    {% endif %}
+                </div>
             </div>
-            {% else %}
-
-            {% if user.is_authenticated %}
-            <h3>Add a comment:</h3>
-            <p>Posting as: {{ user.username }}</p>
-            <form method="post">
-                {{ comment_form | crispy }}
-                {% csrf_token %}
-                <button type="submit">Submit</button>
-            </form>
-            {% endif %}
-            {% endif %}
+            <!-- User votes -->
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h3 id="vote-count"><strong>{{ article.vote_count }}</strong></h3>
+                </div>
+            </div>
+            <!-- Downvote -->
+            <div class="row">
+                <div class="col-12 text-center">
+                    {% if user.is_authenticated %}
+                    <form action="{% url 'article_downvote' article.slug %}" method="post">
+                        {% csrf_token %}
+                        {% if downvoted %}
+                        <button type="submit" class="btn-vote btn-downvoted"><i class="fas fa-chevron-down"></i></button>
+                        {% else %}
+                        <button type="submit" class="btn-vote"><i class="fas fa-chevron-down"></i></button>
+                        {% endif %}
+                    </form>
+                    {% else %}
+                    <span class="btn-vote"><i class="fas fa-chevron-down"></i></span>
+                    {% endif %}
+                </div>
+            </div>
         </div>
+        
+        <!-- Comments -->
+        <div class="container">
+            <!-- Display approved comments -->
+            <div class="row">
+                <div class="col-12">
+                    <h2>Comments</h2>
+                    {% for comment in comments %}
+                    <h4>{{ comment.user_name }}</h4>
+                    <p>{{ comment.body }}</p>
+                    {% endfor %}
+                    <hr>
+                </div>
+            </div>
+            <!-- Writing new user comment -->
+            <div class="row">
+                <div class="col-12">
+                    {% if commented %}
+                    <div role="alert">
+                        Your comment is awaiting approval
+                    </div>
+                    {% else %}
+                    
+                    {% if user.is_authenticated %}
+                    <h3>Add a comment:</h3>
+                    <p>Posting as: {{ user.username }}</p>
+                    <form method="post">
+                        {{ comment_form | crispy }}
+                        {% csrf_token %}
+                        <button type="submit">Submit</button>
+                    </form>
+                    {% endif %}
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+        
+        {% endblock %}
     </div>
 </div>
-
-{% endblock %}
