--- a/templates/country_articles.html
+++ b/templates/country_articles.html
@@ -24,7 +24,7 @@
         <div class="col-12 mt-3 left">
             <div class="row">
             {% for article in articles %}
-                <div class="col-md-4">
+                <div class="card-group col-md-4">
                     <div class="card">
                         <!-- Article image -->
                         {% if "default_image" in article.image.url %}
@@ -38,8 +38,8 @@
                                 <h5 class="card-title">{{ article.title }}</h5>
                                 <p class="card-text">{{ article.summary }}</p>
                                 {% if user.is_authenticated %}
-                                <a class="btn btn-primary" href="{% url 'edit_article' article.slug %}">Edit Article</a>
-                                <a class="btn btn-primary" href="{% url 'delete_article' article.slug %}">Delete Article</a>
+                                    <a id="edit-article" class="btn btn-info" href="{% url 'edit_article' article.slug %}">Edit Article</a>
+                                    <a id="delete-article" class="btn btn-danger" href="{% url 'delete_article' article.slug %}">Delete Article</a>
                                 {% endif %}
                             </a>
                         </div>
@@ -57,7 +57,7 @@
                     </div>
                 </div>
             {% if forloop.counter|divisibleby:3 %}
-            
+            </div>
             <div class="row">
             {% endif %}
             {% endfor %}
@@ -80,7 +80,7 @@
         <div class="text-center my-5">
         <h1 class="fw-bolder">{{ country_name }}</h1>
         {% if user.is_authenticated %}
-        <a class="btn btn-primary" href="{% url 'add_article' country_name %}">Add Article</a>
+        <a class="btn btn-success" href="{% url 'add_article' country_name %}">Add Article</a>
         {% endif %}
     </div>
 </div>
