--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-12 mt-3 left">
             <h2>Welcome to Exploring Unseen</h2>
-            <p>Introduction to home page, articles etc.</p>
+            <p>See where your curiosity can take you...</p>
             <hr>
         </div>
     </div>
@@ -45,7 +45,7 @@
                     </div>
                 </div>
             {% if forloop.counter|divisibleby:3 %}
-            
+            </div>
             <div class="row">
             {% endif %}
             {% endfor %}
