--- a/templates/countries.html
+++ b/templates/countries.html
@@ -24,15 +24,15 @@
         <div class="col-12 mt-3 left">
             <div class="row">
             {% for country in countries %}
-                <div class="col-md-4">
+                <div class="col-md-4 mb-4">
                     <div class="card">
                         <!-- Country content -->
                         <div class="card-body">
                             <a href="{% url 'country_articles' country.country_name %}">
                                 <h5 class="card-title text-center">{{ country.country_name }}</h5>
                                 {% if user.is_authenticated %}
-                                <a class="btn btn-primary" href="{% url 'edit_country' country.country_name %}">Edit Country</a>
-                                <a class="btn btn-primary" href="{% url 'delete_country' country.country_name %}">Delete Country</a>
+                                <a class="btn btn-info" href="{% url 'edit_country' country.country_name %}">Edit Country</a>
+                                <a class="btn btn-danger float-right" href="{% url 'delete_country' country.country_name %}">Delete Country</a>
                                 {% endif %}
                             </a>
                         </div>
@@ -62,7 +62,7 @@
         <div class="text-center my-5">
         <h1 class="fw-bolder">{{ country_name }}</h1>
         {% if user.is_authenticated %}
-        <a class="btn btn-primary" href="{% url 'add_country' %}">Add Country</a>
+        <a class="btn btn-success" href="{% url 'add_country' %}">Add Country</a>
         {% endif %}
     </div>
 </div>
